--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,9 +77,6 @@ dependencies {
     //DataBinding
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
 
-    // Room components
-    implementation "androidx.room:room-runtime:2.4.3"
-    kapt "androidx.room:room-compiler:2.4.3"
-    implementation "androidx.room:room-ktx:2.4.3"
-    androidTestImplementation "androidx.room:room-testing:2.4.3"
+    //DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha04"
 }
