--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "hummfinderapp.beta"
+        applicationId "hummfinderapp.alpha"
         minSdk 21
         targetSdk 32
         versionCode 1
