--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
 
     buildFeatures {
         dataBinding = true
-        viewBinding true
+        viewBinding = true
     }
 }
 
@@ -81,4 +81,7 @@ dependencies {
 
     //DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha04"
+
+    //recyclerview
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
